--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -20,4 +20,6 @@ spring.resources.static-locations=classpath:/static/
 spring.thymeleaf.prefix=classpath:/templates/
 spring.thymeleaf.suffix=.html
 
+uploading.directory=src/main/resources/templates/image
+
 
