--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,6 +2,12 @@ spring.datasource.url=jdbc:mysql://localhost:3306/it_project_management
 spring.datasource.username=root
 spring.datasource.password=Kjkmsjhsbrnfnd10
 
+server.port=8080
+
+#spring.datasource.url=jdbc:mysql://2402:9d80:22e:a851:24cd:1dc4:84c8:404b:3306/db_name
+#spring.datasource.username=root
+#spring.datasource.password=Kjkmsjhsbrnfnd10
+
 #spring.datasource.url=jdbc:mysql://host.matmagoc.com:63306/it_project_management
 #spring.datasource.username=root
 #spring.datasource.password=HaNoi123
