--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,6 +15,7 @@ spring.datasource.password=Kjkmsjhsbrnfnd10
 #spring.datasource.url=jdbc:mysql://us-cdbr-east-06.cleardb.net/heroku_6417dca0729c5d0?reconnect=true
 #spring.datasource.username=b9c7b838346593
 #spring.datasource.password=d8a253bb
+server.servlet.session.tracking-modes=cookie
 server.servlet.session.cookie.secure=false
 
 spring.jpa.hibernate.ddl-auto=update
