--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,7 @@
 spring.datasource.url=jdbc:mysql://localhost:3306/elevator_management
 spring.datasource.username=root
 spring.datasource.password=Kjkmsjhsbrnfnd10
+server.servlet.session.tracking-modes=cookie
 
 
 #spring.datasource.url=jdbc:mysql://2402:9d80:22e:a851:24cd:1dc4:84c8:404b:3306/db_name
